apps/loja-api/overlays/staging/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loja-api
spec:
  tls:
    - hosts:
        - loja-api-stag.felipeduribeiro.com.br
      secretName: loja-api-stag-tls
  rules:
    - host: loja-api-stag.felipeduribeiro.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loja-api
                port:
                  number: 8000
